--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,3 +1,4 @@
+<!-- ./view/new.handlebars -->
 <form action="/todos" method="POST">
   <input type="text" placeholder="name" name="name">
   <button type="submit">Create</button>
