--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,4 +1,7 @@
 <!-- ./view/detail.handlebars -->
 <p>{{ todo.name }}</p>
 <a href="/todos/{{ todo._id }}/edit">edit</a>
+<form action="/todos/{{ todo._id }}/delete" method="POST" style="display: inline;">
+  <button type="submit">delete</button>
+</form>
 <a href="/">back</a>
