--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -1,5 +1,8 @@
 <!-- ./view/detail.handlebars -->
-<p>{{ todo.name }}</p>
+<p>
+  <input type="checkbox" name="isDone" {{#if todo.isDone }} checked {{/if}} disabled>
+  {{ todo.name }}
+</p>
 <a href="/todos/{{ todo._id }}/edit">edit</a>
 <form action="/todos/{{ todo._id }}/delete" method="POST" style="display: inline;">
   <button type="submit">delete</button>
