--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,5 +1,5 @@
 <form action="/todos/{{ todo._id }}/edit" method="POST">
-  <input type="text" placeholder="name" name="name" value="{{ todo.name }}">
+  <input type="text" placeholder="name" name="name" value="{{ todo.name }}" {{#if todo.isDone}} checked {{/if}}>
   <button type="submit">Save</button>
   <a href="/">back</a>
 </form>
