feat: add method-override for RESTful implementation
feat: add method-override for RESTful implementation

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,4 +1,4 @@
-<form action="/todos/{{ todo._id }}/edit" method="POST">
+<form action="/todos/{{ todo._id }}?_method=PUT" method="POST">
   <input type="text" placeholder="name" name="name" value="{{ todo.name }}" {{#if todo.isDone}} checked {{/if}}>
   <button type="submit">Save</button>
   <a href="/">back</a>
