--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
       {{this.name}}
       <a href="./todos/{{ this._id }}/edit">edit</a>
       <a href="./todos/{{ this._id }}">detail</a>
-      <form action="./todos/{{ this._id }}/delete" method="POST" style="display: inline;">
+      <form action="./todos/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;">
         <button type="submit">delete</button>
       </form>
     </li>
