--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -5,11 +5,11 @@
       <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" name="name" class="form-control" placeholder="Enter Name">
+          <input type="text" id="name" name="name" class="form-control" placeholder="Enter Name" value="{{ name }}">
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email">
+          <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" value="{{ email }}">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
