--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,18 @@
 <body class="bg-light">
   <header>
     <nav class="navbar navbar-dark bg-primary justify-content-between">
-      <a class="navbar-brand" href="/">Todo List</a>
-      <a class="btn btn-outline-light" href="/todos/new">Create</a>
+      <a class="navbar-brand" href="/">
+        {{#if isAuthenticated}}{{ user.name}}'s {{/if}}
+        Todo List
+      </a>
+      <div>
+        {{#if isAuthenticated}}
+          <a class="btn btn-outline-light" href="/todos/new">Create</a>
+          <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+        {{else}}
+          <a href="/users/login" class="btn btn-outline-light">Login</a>
+        {{/if}}
+      </div>
     </nav>
   </header>
   <main>
